--- a/userservice.yml
+++ b/userservice.yml
@@ -1,2 +1,18 @@
 server:
   port: 8081
+
+spring:
+  datasource:
+      url: jdbc:mysql://localhost:3306/userservice?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+      username: root
+      password: Sambit@1234
+      driver-class-name: com.mysql.cj.jdbc.Driver
+    
+  jpa:
+    hibernate:
+      ddl-auto: update  # Options: create, update, create-drop, validate, none
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
